Optimized CRUD operations on index page

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,7 +1,7 @@
 {% from "macros.html" import svgBase, svgNavbar, svgFooter, footerKey %}
 
 <!DOCTYPE html>
-<html lang="en" class="h-full">
+<html lang="en">
 <head>
   <title>equilibrium: {% block title %}a minimal workspace{% endblock %}</title>
 
