Implemented validation for user credentials upon registration

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -43,7 +43,7 @@
         <div class="flex-grow"></div>
         {% if current_user.is_authenticated %}
         <!-- placeholder -->
-        {{ svgNavbar("main.index", "user") }}
+        {{ svgNavbar("main.stats", "user") }}
         {{ svgNavbar("main.index", "bell") }}
         {{ svgNavbar("auth.logout", "right-from-bracket") }}
         {% else %}
