--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -5,11 +5,9 @@
   <form action="{{ url_for('auth.login') }}" method="post" class="flex flex-col gap-4 caret-caret-color">
     <input class="rounded-lg p-2 bg-sub-color text-text-color" type="text" placeholder="email" name="email">
     <input class="rounded-lg p-2 bg-sub-color text-text-color" type="text" placeholder="password" name="password">
-    <div class="flex flex-row items-center justify-around">
-      <a href="{{ url_for('auth.register') }}">
-        register
-      </a>
-      <button type="submit">login</button>
+    <div class="flex flex-row-reverse items-center justify-around">
+      <button class="rounded-lg px-3 py-2 transition-colors bg-sub-color text-text-color hover:bg-sub-alt-color hover:text-main-color focus:bg-sub-alt-color focus:text-main-color" type="submit">login</button>
+      <a href="{{ url_for('auth.register') }}" class="transition-colors hover:text-text-color focus:text-text-color">register</a>
     </div>
   </form>
 </div>
