--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% block title %}login{% endblock %}
+
 {% block content %}
 <div class="flex justify-center items-center max-w-7xl h-full mx-auto px-8">
   <form action="{{ url_for('auth.login') }}" method="post" class="flex flex-col gap-4 caret-caret-color">
