--- a/app/templates/auth/unconfirmed.html
+++ b/app/templates/auth/unconfirmed.html
@@ -6,7 +6,7 @@
 <div class="flex flex-col justify-center items-center gap-8 max-w-7xl h-full mx-auto px-8">
   <div class="flex flex-col gap-2 w-1/2">
     <div class="w-full">
-      user <span class="text-main-color">{{ current_user.username }}</span>,
+      user <span class="text-text-color">{{ current_user.username }}</span>,
     </div>
     <div>
       your account has not been confirmed.
