--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -62,7 +62,7 @@
 
 
 {% macro utilsItem(id="", value="") %}
-<div id="utils-item-{{ id }}" class="flex flex-row items-center py-2 px-4 max-w-full h-fit bg-sub-alt-color rounded-lg group snap-start transition-colors duration-300 utils-item">
+<div id="utils-item-{{ id }}" class="flex flex-row items-center py-2 px-4 max-w-full h-fit bg-sub-alt-color focus-within:bg-sub-color rounded-lg group snap-start transition-colors duration-300 utils-item">
   <div class="flex-grow line-clamp-[99] transition-all duration-300 text-sub-color hover:text-text-color focus:text-text-color cursor-pointer caret-caret-color text-sm utils-item-content">{{ value|e }}</div>
   <div class="flex flex-col flex-none justify-between pb-[1%] text-sub-color opacity-0 group-hover:opacity-100 transition-all duration-500">
     <button type="button" class="transition-colors duration-300 fill-current text-sub-color hover:text-text-color focus:text-text-color utils-item-update-button">
