--- a/app/templates/auth/password-update.html
+++ b/app/templates/auth/password-update.html
@@ -9,7 +9,7 @@
     <input class="rounded-lg p-2 bg-sub-color text-text-color" type="text" placeholder="new password" name="new-password">
     <div class="flex flex-row-reverse items-center justify-around">
       <button class="rounded-lg px-3 py-2 transition-colors bg-sub-color text-text-color hover:bg-sub-alt-color hover:text-main-color focus:bg-sub-alt-color focus:text-main-color" type="submit">update</button>
-      <a href="{{ url_for('auth.password_reset') }}" class="transition-colors hover:text-text-color focus:text-text-color">reset</a>
+      <a href="{{ url_for('auth.password_reset_request') }}" class="transition-colors hover:text-text-color focus:text-text-color">reset</a>
     </div>
   </form>
 </div>
