--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -62,15 +62,15 @@
 
 
 {% macro utilsItem(id="", value="") %}
-<div id="utils-item-{{ id }}" class="flex flex-row items-center py-2 px-4 max-w-full h-fit bg-sub-alt-color focus-within:bg-sub-color rounded-lg group snap-start transition-colors duration-300 utils-item">
-  <div class="flex-grow line-clamp-[99] transition-all duration-300 text-sub-color hover:text-text-color focus:text-text-color cursor-pointer caret-caret-color text-sm utils-item-content">{{ value|e }}</div>
-  <div class="flex flex-col flex-none justify-between pb-[1%] text-sub-color opacity-0 group-hover:opacity-100 transition-all duration-500">
-    <button type="button" class="transition-colors duration-300 fill-current text-sub-color hover:text-text-color focus:text-text-color utils-item-update-button">
+<div id="utils-item-{{ id }}" class="flex flex-row items-center py-2 px-4 max-w-full h-fit bg-sub-alt-color focus-within:bg-sub-color text-sub-color rounded-lg group snap-start transition-colors duration-300 utils-item">
+  <div class="flex-grow line-clamp-[99] transition-all duration-300 text-sub-color hover:text-text-color focus:text-text-color focus-within:text-main-color cursor-pointer caret-caret-color text-sm peer utils-item-content">{{ value|e }}</div>
+  <div class="flex flex-col flex-none justify-between pb-[1%] transition-all duration-300 opacity-0 hover:opacity-100 peer-focus:opacity-100 peer-focus:text-text-color focus-within:opacity-100">
+    <button type="button" class="fill-current focus:text-main-color utils-item-update-button">
       <svg class="fill-inherit inline-block w-4 h-4 ml-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 {{ ICONS['pen-to-square_'].dimension }}">
         {{ ICONS['pen-to-square_'].path|safe }}
         </svg>
       </button>
-    <button type="submit" class="transition-colors duration-300 fill-current text-sub-color hover:text-text-color focus:text-text-color utils-item-delete-button">
+    <button type="submit" class="fill-current utils-item-delete-button">
       <svg class="fill-inherit inline-block w-4 h-4 ml-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 {{ ICONS['trash-can_'].dimension }}">
         {{ ICONS['trash-can_'].path|safe }}
       </svg>
